# geolocation-app

./: README.md
app/: .gitignore  README.md  app.json  package-lock.json  package.json
app/android/app/: build.gradle
app/assets/: assets.js
app/ios/: Podfile
app/src/: App.js  CreateUserScreen.js  FriendHistoryScreen.js  FriendsScreen.js  HistoryScreen.js  LoginScreen.js  ProfileScreen.js  RouteDisplay.js  StartScreen.js  TrailsScreen.js  restAPI.js  utils.js
app/src/components/: Alert.js  QRCode.js  Toast.js
database/: .gitignore  Dockerfile  README.md  SCHEMA.md  build  clean  run
database/sql/: 00-up.sql  01-funcs.sql  02-views.sql  03-index.sql  04-test.sql
server/: .gitignore  Cargo.toml  README.md  RESTAPI.md
server/src/: database.rs  main.rs  model.rs
server/static/: style.css
server/templates/: base.html.tera  friends.html.tera  index.html.tera  trails.html.tera  users.html.tera
