[package]
name = "geolocation-server"
version = "0.4.1"
edition = "2021"
authors = ["Jakob Fridesjö"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.14.1"
postgres = { version = "0.19.4", features = ["with-serde_json-1"] } 
rocket = { version = "0.5.0-rc.2", features= ["json"] }
rocket_codegen = "0.5.0-rc.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
default-features = false
features = ["postgres_pool"]
